--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,18 @@
-## Arduino Mega
-#[env:megaatmega2560]
-#platform = atmelavr
-#board = megaatmega2560
-#framework = arduino
-#monitor_speed = 57600
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
 
-## Arduino Uno
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
 monitor_speed = 57600
+lib_deps = 
+	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
+	paulstoffregen/Time@^1.6.1
