--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env:megaatmega2560]
 platform = atmelavr
-board = uno
+board = megaatmega2560
+
+;[env:uno]
+;platform = atmelavr
+;board = uno
+
 framework = arduino
 monitor_speed = 57600
 lib_deps = 
 	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
 	paulstoffregen/Time@^1.6.1
+
+upload_port = /dev/ttyACM0
+monitor_port = /dev/ttyACM0
