--- a/platformio.ini
+++ b/platformio.ini
@@ -1,18 +1,8 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-[env:uno]
+[env:megaatmega2560]
 platform = atmelavr
-board = uno
+board = megaatmega2560
 framework = arduino
 monitor_speed = 57600
 lib_deps = 
-	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
 	paulstoffregen/Time@^1.6.1
+	adafruit/RTClib@^2.1.1
