get_time as char array, add_alarm, remove_alarm

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,15 @@
-[env:megaatmega2560]
+#[env:megaatmega2560]
+#platform = atmelavr
+#board = megaatmega2560
+#framework = arduino
+#monitor_speed = 57600
+#lib_deps = 
+#	paulstoffregen/Time@^1.6.1
+#	adafruit/RTClib@^2.1.1
+#
+#
+[env:uno]
 platform = atmelavr
-board = megaatmega2560
+board = uno
 framework = arduino
 monitor_speed = 57600
-lib_deps = 
-	paulstoffregen/Time@^1.6.1
-	adafruit/RTClib@^2.1.1
