Beginning of GUI navigation logic

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,10 +7,8 @@
 [env:uno]
 platform = atmelavr
 board = megaatmega2560
+#board = uno
 
-;[env:uno]
-;platform = atmelavr
-;board = uno
 
 framework = arduino
 monitor_speed = 57600
