Fixed print bug

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,13 @@
-[env:megaatmega2560]
-platform = atmelavr
-board = megaatmega2560
-framework = arduino
-monitor_speed = 57600
+# [env:megaatmega2560]
+# platform = atmelavr
+# board = megaatmega2560
+# framework = arduino
+# monitor_speed = 57600
+
 
 [env:uno]
 platform = atmelavr
-board = megaatmega2560
+board = uno
 framework = arduino
 monitor_speed = 57600
+#targets = upload, monitor
