--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,13 @@
-# [env:megaatmega2560]
-# platform = atmelavr
-# board = megaatmega2560
-# framework = arduino
-# monitor_speed = 57600
-
-
-[env:uno]
+[env:megaatmega2560]
 platform = atmelavr
-board = uno
+board = megaatmega2560
 framework = arduino
 monitor_speed = 57600
+
+
+#[env:uno]
+#platform = atmelavr
+#board = uno
+#framework = arduino
+#monitor_speed = 57600
 #targets = upload, monitor
