--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 monitor_speed = 9600
-lib_deps = apechinsky/MemoryFree@^0.3.0
+lib_deps = 
+	apechinsky/MemoryFree@^0.3.0
+	paulstoffregen/XPT2046_Touchscreen@0.0.0-alpha+sha.26b691b2c8
