--- a/platformio.ini
+++ b/platformio.ini
@@ -1,18 +1,13 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-[env:megaatmega2560]
+[env:mega]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-monitor_speed = 9600
-lib_deps = 
-	apechinsky/MemoryFree@^0.3.0
-	paulstoffregen/XPT2046_Touchscreen@0.0.0-alpha+sha.26b691b2c8
+monitor_speed = 57600
+targets= upload, monitor
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+monitor_speed = 57600
+targets = upload, monitor
